k8s/app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: floorball-fantasy-api-deployment
  namespace: floorball-fantasy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: floorball-fantasy-api
  template:
    metadata:
      labels:
        app: floorball-fantasy-api
    spec:
      containers:
        - image: anzeha/floorball-fantasy:314b78b
          name: floorball-fantasy-api
          ports:
            - containerPort: 8080
              name: server
              protocol: TCP

---

apiVersion: v1
kind: Service
metadata:
  name: floorball-fantasy-api
  namespace: floorball-fantasy
spec:
  type: ClusterIP
  ports:
    - port: 8081
      protocol: TCP
      targetPort: server
  selector:
    app: floorball-fantasy-api
