k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: floorball-fantasy-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  rules:
  - http:
      paths:
      - path: /users
        pathType: Prefix
        backend:
          service:
            name: users
            port:
              number: 8080
      - path: /game-domain
        pathType: Prefix
        backend:
          service:
            name: game-domain
            port:
              number: 8080
      - path: /game-logic
        pathType: Prefix
        backend:
          service:
            name: game-logic
            port:
              number: 8080
